--- a/Fullstack_Live/Week_5/Day_4/MiniProject/style.css
+++ b/Fullstack_Live/Week_5/Day_4/MiniProject/style.css
@@ -1,13 +1,48 @@
-body {
+body, #Generator{
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #FFD2A6;
 }
 
-#quoteSection {
-    
+p {
+    font-size: 16px;
+}
+
+blockquote {
+    font-style: bold;
+}
+
+
+#quotePrint{
+    margin-top: 20px;
+    padding-top: 10px;
+    border: 1px outset #C3976A;
+    width: 40%;
+    height: 100px;
+    background-color: #FFDFBF;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.148);
+}
+
+button {
+    width: 170px;
+    height: 50px;
+    font-size: 16px;
+    background-color: #D9C6B0;
+    border: 5px outset #401D10;
+    transition: 0.2s ease-in-out;
+}
+
+button:active{
+    border: 5px inset #401D10;
+}
+
+button:hover{
+    background-color: #D9C6B0;
 }
