--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/style.css
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/style.css
@@ -14,7 +14,12 @@ button{
     background-color: #1a53ff;
     border-color: #1a53ff;
     color: white;
+    display: block;
   } 
+
+  button:hover{
+    background-color: #1a53fff2;
+  }
 
   body{
     background-color: #3399ff;
@@ -30,13 +35,18 @@ h1{
     display: flex;
     justify-content: center;
     flex-direction: row;
+    padding: 10px;
     gap: 20px;
 }
 
 #tiktaktoeContainer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
     border-collapse: collapse;
-    width: 300px;
+    width: 100%;
     height: 300px;
+    padding: 100px;
 }
 
 #tiktaktoeContainer td {
@@ -65,5 +75,5 @@ h1{
 
 
 #tiktaktoeContainer td:hover {
-    background-color: #f0f0f0; /* Add hover effect */
+    background-color: #f0f0f019; /* Add hover effect */
 }
