--- a/Fullstack_Live/Week_5/Day_5/MiniProject#2/style.css
+++ b/Fullstack_Live/Week_5/Day_5/MiniProject#2/style.css
@@ -31,6 +31,18 @@ h1{
     font-family:  "Comic Sans MS", cursive, sans-serif;
 } 
   
+#chooseLevel {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 10px;
+    gap: 20px;
+}
+
+#chooseLevel button {
+    width: 100px;
+}
+
 #chooseXO {
     display: flex;
     justify-content: center;
