--- a/Fullstack_Live/Week_6/Day_2/DailyChallenge#1/style.css
+++ b/Fullstack_Live/Week_6/Day_2/DailyChallenge#1/style.css
@@ -1,3 +1,5 @@
+/*Chat GPT did the css, i was with desintery*/
+
 /* General Page Styles */
 body {
     font-family: "Comic Sans MS", cursive, sans-serif; /* Classic 2000s font */
