--- a/Fullstack_Live/Week_6/Day_2/DailyChallenge#1/style.css
+++ b/Fullstack_Live/Week_6/Day_2/DailyChallenge#1/style.css
@@ -1,4 +1,4 @@
-/*Chat GPT did the css, i was with desintery*/
+/*Chat GPT did the css, i was with desintery - Redo it later*/
 
 /* General Page Styles */
 body {
