--- a/Fullstack_Live/Week_6/Day_3/DailyChallenge/style.css
+++ b/Fullstack_Live/Week_6/Day_3/DailyChallenge/style.css
@@ -1,4 +1,10 @@
 /* Global styles */
+*,
+*::before,
+*::after {
+    box-sizing: border-box; /* Ensures padding and border are included in width */
+}
+
 body {
     font-family: Arial, sans-serif;
     display: flex;
