--- a/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/src/App.css
+++ b/Fullstack_Live/Week_9/Day_1/Lesson/exercise_light_dark/src/App.css
@@ -7,3 +7,20 @@
   background-color: #000;
   color: #fff;
 }
+
+header {
+  padding: 1em;
+  text-align: center;
+}
+
+button {
+  padding: 0.5em 1em;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+main {
+  padding: 2em;
+  text-align: center;
+}
