--- a/Fullstack_Live/Week_9/Day_1/ExerciseXP/vite-project/src/App.css
+++ b/Fullstack_Live/Week_9/Day_1/ExerciseXP/vite-project/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.light {
+  height: 100vh;
+  width: 100vw;
+  background-color: #fff;
+  color: #000;
+}
+
+.dark {
+  height: 100vh;
+  width: 100vw;
+  background-color: #000;
+  color: #fff;
+}
+
+body {
+  padding: 1em;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+button {
+  padding: 0.5em 1em;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin: 15px;
 }
